@@ -34,21 +34,37 @@ do_install() {
 }
 
 
+output_changes_file_version_marker() {
+
+	line() {
+		dashes="$(printf '%0.s-' $(seq 1 13))"
+		echo "${dashes}>>>> $1 <<<<${dashes}"
+	}
+
+	tag_line="$(line $1)"
+
+	echo "-${tag_line}${tag_line}${tag_line}-"
+}
+
+
 update_changes_file() {
 	local LATEST_STABLE_RELEASE
 	LATEST_STABLE_RELEASE=$(git describe --tags $(git rev-list --tags --max-count=1))
 
 	[[ -f CHANGES ]] && mv CHANGES CHANGES.old
 
+	output_changes_file_version_marker "${LATEST_STABLE_RELEASE}" > CHANGES
+
 	{ git log \
 		--pretty=format:"[%ai] %<(69,trunc) %s %><(15) %aN {%h}" \
-		--cherry-pick "${LATEST_STABLE_RELEASE}...HEAD"; } > CHANGES
+		--cherry-pick "${LATEST_STABLE_RELEASE}...HEAD"; } >> CHANGES
 
-	[[ -f CHANGES.old ]] && cat CHANGES.old >> CHANGES && rm CHANGES.old
 
-	git add CHANGES
-	git commit -m 'RELEASE PREP :: Update CHANGES file.'
-	git push
+	[[ -f CHANGES.old ]] && echo "" >> CHANGES && cat CHANGES.old >> CHANGES && rm CHANGES.old
+
+	#git add CHANGES
+	#git commit -m 'RELEASE PREP :: Update CHANGES file.'
+	#git push
 }
 
 
